[package]
name = "xdrgen"
version = "0.8.0"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
license = "MIT/Apache-2.0"
description = "XDR codec generator from specification. Designed for use with xdr-codec."
repository = "https://github.com/jsgf/rust-xdr/tree/master/xdrgen"
documentation = "https://docs.rs/xdrgen/"
readme = "README.md"
keywords = ["encoding", "protocol", "xdr", "rfc4506", "serialization"]
include = ["src/**/*.rs", "tests/**/*.rs", "*.md", "Cargo.toml"]
edition = "2018"

[[bin]]
name = "xdrgen"
path = "src/xdrgen.rs"
test = false
bench = false
doc = false

[features]
default = []
unstable = []
derive_serde = ["serde"]
derive_json_schema = ["schemars"]
derive_strum_enum_string = ["strum"]
reprc = []
pretty = ["anyhow", "prettyplease", "syn"]

[dependencies]
log = "0.4"
env_logger = "0.9"
nom = { version = "3.1", features = ["verbose-errors"] }
quote = "1"
proc-macro2 = "1"
clap = "3"
lazy_static = "1.4"
bitflags = "1.2"
serde = { version = "1.0", features = ["derive"], optional = true }
schemars = { version = "0.8", optional = true }
strum = { version = "0.24", optional = true, features = ["derive"] }

anyhow = { version = "1", optional = true }
prettyplease = { version = "0.1", optional = true }
syn = { version = "1", default-features = false, features = [
    "parsing",
    "printing",
], optional = true }

[dependencies.xdr-codec]
path = "../xdr-codec"
version = "0.4"

[dev-dependencies]
tempdir = "0.3"
error-chain = "0.10"
